--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "simple_portfolio",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "tailwind": "npx tailwindcss -i ./input.css -o ./dist/style.css --watch"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "tailwindcss": "^3.4.3"
-  }
+    "name": "simple_portfolio",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "tailwind": "npx tailwindcss -i ./input.css -o ./dist/style.css --watch"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@awmottaz/prettier-plugin-void-html": "^1.5.0",
+        "prettier-plugin-tailwindcss": "^0.6.1",
+        "tailwindcss": "^3.4.3"
+    }
 }
